fix: script run